k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qweelvo-mini-app
  namespace: core
spec:
  replicas: 2
  selector:
    matchLabels:
      app: qweelvo-mini-app
  template:
    metadata:
      labels:
        app: qweelvo-mini-app
    spec:
      containers:
        - name: qweelvo-mini-app
          image: ghcr.io/youssefalaa10/qweelvo-mini-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
