k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qweelvo-mini-app
  namespace: core
spec:
  selector:
    app: qweelvo-mini-app
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
